# esp32-c3-mini-main

./: .gitignore  platformio.ini
include/: lv_conf.h  main.h
lib/: lv_conf.h
lib/WebServerModule/: web_server.cpp  web_server.h
src/: WakeOnLan.h  main.cpp  power_icon.c  wifi_icon.c
src/fonts/: arial_16_cyrillic.c
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_MainScreen.c  ui_MainScreen.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_comp_hook.c  ui_events.h  ui_font_CyrillicFont16.c  ui_font_CyrillicFont48.c  ui_helpers.c  ui_helpers.h  ui_img_1043026700.c  ui_img_1128119850.c  ui_img_1196411779.c  ui_img_138099915.c  ui_img_1383777379.c  ui_img_1411788627.c  ui_img_1462637809.c  ui_img_17412894.c  ui_img_177608572.c  ui_img_2013642630.c  ui_img_2081802504.c  ui_img_2101116832.c  ui_img_2145098084.c  ui_img_223749859.c  ui_img_345481163.c  ui_img_368706879.c  ui_img_68068241.c  ui_img_710556636.c  ui_img_996087739.c  ui_img_blizzard_png.c  ui_img_blowingsnow_png.c  ui_img_bluetooth_png.c  ui_img_clearnight_png.c  ui_img_cloud_png.c  (+29 more)
