SET(SOURCES ui_Screen1.c
    ui_Screen2.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_2081802504.c
    ui_img_wolbutton_png.c
    ui_img_wifion_png.c
    ui_img_partlycloudy_png.c
    ui_img_blizzard_png.c
    ui_img_blowingsnow_png.c
    ui_img_clearnight_png.c
    ui_img_cloudy_png.c
    ui_img_cloudycleartimes_png.c
    ui_img_cloudycleartimesnight_png.c
    ui_img_drizzle_png.c
    ui_img_drizzlenight_png.c
    ui_img_drizzlesun_png.c
    ui_img_fog_png.c
    ui_img_hail_png.c
    ui_img_heavyrain_png.c
    ui_img_humidity_png.c
    ui_img_partlycloudynight_png.c
    ui_img_rain_png.c
    ui_img_rainnight_png.c
    ui_img_rainsun_png.c
    ui_img_rainthunderstorm_png.c
    ui_img_scatteradshowers_png.c
    ui_img_scatteradshowersnight_png.c
    ui_img_scatteradthunderstorm_png.c
    ui_img_severthunderstorm_png.c
    ui_img_sleet_png.c
    ui_img_snow_png.c
    ui_img_sunny_png.c
    ui_img_wifioff_png.c
    ui_img_down_png.c
    ui_img_up_png.c)

add_library(ui ${SOURCES})
